manifacturer dropdown list from template with unique values

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="#">
   <title>Printers</title>
   <style>
     input[type='submit'], button, [aria-label]{
@@ -20,7 +21,7 @@
 
     <table>
       <tr style="text-align: left;">
-        <th>Manifacturer</th>
+        <th>Manufacturer</th>
         <th>Family</th>
         <th>Model</th>
         <th>Serial</th>
@@ -31,8 +32,8 @@
         <form action="javascript:void(0);" method="POST" onsubmit="app.Add()"> 
           <td>
             <select
-              id="manifacturer"
-              name="manifacturer"
+              id="manufacturer"
+              name="manufacturer"
               required
             ></select>
           </td>
