--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,8 @@
           <td>
             <input
               type="text"
-              id="add-family"
+              id="family"
+              name="family"
               placeholder="family"
               required
             >
@@ -48,7 +49,8 @@
           <td>
             <input
               type="text"
-              id="add-model"
+              id="model"
+              name="model"
               placeholder="model"
               required
             >
@@ -56,7 +58,8 @@
           <td>
             <input
               type="text"
-              id="add-serial"
+              id="serial"
+              name="serial"
               placeholder="serial"
               required
             >
@@ -65,6 +68,7 @@
             <input
               type="text"
               id="ip"
+              name="ip"
               placeholder="ip address"
               required
             >
