--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <th></th>
       </tr>
       <tr>
-        <form action="javascript:void(0);" method="POST" onsubmit="app.Add()"> 
+        <form action="javascript:void(0);" method="POST" onsubmit="addPrinter()"> 
           <td>
             <select
               id="manufacturer"
@@ -63,7 +63,7 @@
           <td>
             <input
               type="submit"
-              value="Add"
+              value="addPrinter"
             >
           </td>
         </form>
