delete button working

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
           <td>
             <input
               type="submit"
-              value="addPrinter"
+              value="Add"
             >
           </td>
         </form>
