--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <h1>LAC agent</h1>
+  <h4>LAC is an open source <a href="https://github.com/steledama/lac">project on github</a></h4>
   <h2>1) Add printer to monitor</h2>
 
     <table>
