starting error handling

--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,8 @@
       </tr>
     </table>
   </h5>
+  <div id="indexFeedback1">
+  </div>
   <table>
     <tr>
       <th><p id="counter"></p></th>
@@ -86,6 +88,11 @@
       <tbody id="printers">
       </tbody>
   </table>
+
+  <div class= "indexStep2" id="indexStep2">
+    <hr>
+    <h3>Step <b>2</b> of 4: Add host to zabbix server</h3>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
