--- a/public/newProfile.html
+++ b/public/newProfile.html
@@ -76,8 +76,9 @@
         <tbody id="printers">
         </tbody>
     </table>
-
-  <div class="step2">
+    <div class="newProfileFeedback1"></div>
+    <iframe src="snmp.json" width=800 height=200 frameborder=3 id="snmp-results" name="snmp-results" title="SNMP RESULTS"></iframe>
+  <div class="newProfileStep2">
   <hr>
   <h3>Step 2 of 4: Set basic profile informations</h3>
   <h5>
