--- a/public/index.html
+++ b/public/index.html
@@ -1,98 +1,92 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="#">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>LAC: Monitored printers</title>
-</head>
-<body>
-  <h1>LAC</h1>
-  <div class="subtitle"><a href="https://github.com/steledama/lac">open source</a> snmp agent for <a href="https://www.zabbix.com/">zabbix</a></div>
-  <div class="navigationBar">
-    <hr>
-    <ul>
-      <li> | <a class="active"><b>Monitored printers</b></a> | </li>
-      <li><a href="newProfile.html">New profile</a> | </li>
-      <li><a>Edit profile</a> | </li>
-    </ul>
-    <hr>
-  </div>
+  <head>
+      <!-- Favicon error-->
+    <link rel="shortcut icon" href="#">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <h3>Step <b>1</b> of 4: Add printer to monitor</h3>
-  <h5>
-    <table>
-      <tr style="text-align: left;">
-        <th>Manufacturer</th>
-        <th>Family</th>
-        <th>Model</th>
-        <th>Ip address</th>
-        <th></th>
-      </tr>
-      <tr>
-        <form action="javascript:void(0);" method="POST" onsubmit="addPrinter()"> 
-          <td>
-            <select
-              onchange="showFamily()"
-              id="manufacturer"
-              name="manufacturer"
-              required
-            ></select>
-          </td>
-          <td>
-            <select
-              onchange="showModel()"
-              style="display: none;"
-              id="family"
-              name="family"
-              required
-            ></select>
-          </td>
-          <td>
-            <select
-              onchange="showIp()"
-              style="display: none;"
-              id="model"
-              name="model"
-              required
-            ></select>
-          </td>
-          <td>
-            <input
-              style="display: none;"
-              type="text"
-              id="ip"
-              name="ip"
-              placeholder="insert ip address"
-              required
-            >
-          </td>
-          <td>
-            <input
-              type="submit"
-              value="Add"
-            >
-          </td>
-        </form>
-      </tr>
-    </table>
-  </h5>
-  <div id="indexFeedback1">
-  </div>
-  <table>
-    <tr>
-      <th><p id="counter"></p></th>
-    </tr>
-      <tbody id="printers">
-      </tbody>
-  </table>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-  <div class= "indexStep2" id="indexStep2">
-    <hr>
-    <h3>Step <b>2</b> of 4: Add host to zabbix server</h3>
-  </div>
-  <script src="index.js"></script>
-</body>
+    <title>LAC: monitored devices</title>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <h1 class="text-center">LAC</h1>
+      <h6 class="text-center">open source snmp agent</h6>
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">LAC</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Monitored devices</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="newProfile.html">New profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#">Edit profile</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- GENERAL SETTINGS -->
+      <div id="displayGeneralSettings"></div>
+      <form class="row gx-3 gy-2 align-items-center mb-2" id="generalSettings">
+        <div class="col-sm-3">
+          <label for="lacserver">LAC Server</label>
+          <input type="text" class="form-control" id="lacServer" required>
+        </div>
+        <div class="col-sm-3">
+          <label for="zabbixServer">Zabbix Server</label>
+          <input type="text" class="form-control" id="zabbixServer" required>
+        </div>
+        <div class="col-auto">
+          <button type="submit" class="btn btn-secondary">Save new settings</button>
+        </div>
+      </form>
+      <!-- settings alert-->
+      <div id="settingsAlert"></div>
+
+      <hr>
+      <!-- ADD DEVICE -->
+      <h6>Add device to monitor</h6>
+      <form class="row gx-3 gy-2 align-items-center mb-2" id="addDevice">
+        <div class="col-sm-3">
+            <label for="validationDefault01" class="form-label">Ip address</label>
+            <input type="text" class="form-control" id="validationDefault01" value="192.168.1.3" required>
+          </div>
+          <div class="col-sm-3">
+            <button class="btn btn-primary" type="submit">Add device</button>
+          </div>
+      </form>
+      <!-- ADD DEVICE FEEDBACK -->
+      <div class="alert alert-primary" role="alert" id="devicesAlert">
+        Provide the ip address of the device you want to monitor
+      </div>
+      <!-- MONITORED DEVICES LIST -->
+      <div id="devicesList"></div>
+    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+    -->
+    <script src="index.js"></script>
+  </body>
 </html>
