general settings fix

--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,11 @@
       <form class="row gx-3 gy-2 align-items-center mb-2" id="generalSettings">
         <div class="col-sm-3">
           <label for="lacserver">LAC Server</label>
-          <input type="text" class="form-control" id="lacServer" required>
+          <input type="text" class="form-control" id="lacServer" placeholder="localhost:5000" required>
         </div>
         <div class="col-sm-3">
           <label for="zabbixServer">Zabbix Server</label>
-          <input type="text" class="form-control" id="zabbixServer" required>
+          <input type="text" class="form-control" id="zabbixServer" placeholder="stele.dynv6.net" required>
         </div>
         <div class="col-auto">
           <button type="submit" class="btn btn-secondary">Save new settings</button>
